fix(block): Define `lg` modifier for bigger spacing

--- a/assets/scss/_components/_block.scss
+++ b/assets/scss/_components/_block.scss
@@ -25,6 +25,12 @@
 		@include bp(min-width, sm) {
 			padding: 0 50px;
 		}
+
+		@include modifier(lg) {
+			@include bp(min-width, sm) {
+				margin-bottom: 100px;
+			}
+		}
 	}
 
 	@include element(title) {
